; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavcodec/extr_librav1e.c_pix_fmt_map.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavcodec/extr_librav1e.c_pix_fmt_map.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@RA_CHROMA_SAMPLING_CS420 = common dso_local global i32 0, align 4
@RA_CHROMA_SAMPLING_CS422 = common dso_local global i32 0, align 4
@RA_CHROMA_SAMPLING_CS444 = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @pix_fmt_map to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @pix_fmt_map(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* %3, align 4
  switch i32 %4, label %11 [
    i32 139, label %5
    i32 130, label %5
    i32 138, label %5
    i32 137, label %5
    i32 136, label %7
    i32 129, label %7
    i32 135, label %7
    i32 134, label %7
    i32 133, label %9
    i32 128, label %9
    i32 132, label %9
    i32 131, label %9
  ]

5:                                                ; preds = %1, %1, %1, %1
  %6 = load i32, i32* @RA_CHROMA_SAMPLING_CS420, align 4
  store i32 %6, i32* %2, align 4
  br label %13

7:                                                ; preds = %1, %1, %1, %1
  %8 = load i32, i32* @RA_CHROMA_SAMPLING_CS422, align 4
  store i32 %8, i32* %2, align 4
  br label %13

9:                                                ; preds = %1, %1, %1, %1
  %10 = load i32, i32* @RA_CHROMA_SAMPLING_CS444, align 4
  store i32 %10, i32* %2, align 4
  br label %13

11:                                               ; preds = %1
  %12 = call i32 @av_assert0(i32 0)
  br label %13

13:                                               ; preds = %5, %7, %9, %11
  %14 = load i32, i32* %2, align 4
  ret i32 %14
}

declare dso_local i32 @av_assert0(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
